fix horizontal scrolling on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -318,6 +318,7 @@ li {
     }
 
     header img {
+        overflow-x: hidden;
         width: auto;
     }
 
